tests/snapshots/regression/collections__nested_collections_with_errors.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/collections/nested_collections_with_errors.flx
exit_code: 1

[1 of 7] Compiling  Assert
[2 of 7] Compiling  IO
[3 of 7] Compiling  List
[4 of 7] Compiling  Numeric
[5 of 7] Compiling  Option
[6 of 7] Compiling  String
• 4 errors • tests/fixtures/collections/nested_collections_with_errors.flx
error[E073]: Missing Comma

Missing comma between items.

  tests/fixtures/collections/nested_collections_with_errors.flx:1:6
  |
1 | f([1 2 3], g(4 5), [true false]);
  |      ^

Hint:
  Add a comma between items, e.g. `[a, b]`.


error[E073]: Missing Comma

Missing comma between items.

  tests/fixtures/collections/nested_collections_with_errors.flx:1:8
  |
1 | f([1 2 3], g(4 5), [true false]);
  |        ^

Hint:
  Add a comma between items, e.g. `[a, b]`.


error[E073]: Missing Comma

Missing comma between arguments.

  tests/fixtures/collections/nested_collections_with_errors.flx:1:16
  |
1 | f([1 2 3], g(4 5), [true false]);
  |                ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


error[E073]: Missing Comma

Missing comma between items.

  tests/fixtures/collections/nested_collections_with_errors.flx:1:26
  |
1 | f([1 2 3], g(4 5), [true false]);
  |                          ^^^^^

Hint:
  Add a comma between items, e.g. `[a, b]`.

Found 4 errors.
