tests/snapshots/regression/collections__trailing_commas_everywhere.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/collections/trailing_commas_everywhere.flx
exit_code: 1

[ 1 of 18] Compiling  Add
[ 2 of 18] Compiling  Assert
[ 3 of 18] Compiling  Debug
[ 4 of 18] Compiling  Array
[ 5 of 18] Compiling  List
[ 6 of 18] Compiling  Either
[ 7 of 18] Compiling  Eq
[ 8 of 18] Compiling  IO
[ 9 of 18] Compiling  Math
[10 of 18] Compiling  Num
[11 of 18] Compiling  Numeric
[12 of 18] Compiling  Option
[13 of 18] Compiling  Ord
[14 of 18] Compiling  Primops
[15 of 18] Compiling  Semigroup
[16 of 18] Compiling  Show
[17 of 18] Compiling  String
• 2 errors • tests/fixtures/collections/trailing_commas_everywhere.flx
error[E430]: Could Not Infer Concrete Type

Flux could not determine a concrete result type for this definition before code generation. Internal detail: definition `0` still has unresolved type variable #N at the backend representation.

  tests/fixtures/collections/trailing_commas_everywhere.flx:2:1
  |
2 | f(1,2,);
  | ^^^^^^^^

Hint:
  Add a type annotation or make the expression's result type unambiguous.


error[E004]: Undefined Variable

I can't find a value named `f`.

  tests/fixtures/collections/trailing_commas_everywhere.flx:2:1
  |
2 | f(1,2,);
  | ^

Hint:
  Define it first: let f = ...;

Help:
  Did you mean one of: `Flow.Eq.eq`, `Flow.Eq.neq`, `Flow.Ord.gt`?

Found 2 errors.
